2013-02-02  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Updated.

2013-02-02  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2013-01-17  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Updated.

2013-01-17  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-error-15.patch: Updated.

2013-01-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-secondary-1.patch: Updated.

2013-01-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-error-15.patch: Updated.

2013-01-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14897-1.patch: Removed.
	* README: Likewise.

2013-01-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14899-1.patch: Removed.
	* README: Likewise.

2013-01-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-use-ld-1.patch: Removed.
	* README: Likewise.

2012-12-21  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2012-12-21  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14980-1.patch: Removed.
	* README: Likewise.

2012-12-21  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14980-1.patch: New.  Properly adjust h->plt.refcount.
	* README: Apply it.

2012-12-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Updated.

2012-12-06  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14915-1.patch: Removed.
	* README: Likewise.

2012-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Add a test for PR ld/14918.

2012-12-04  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14915-1.patch: New.  Extend --copy-dt-needed-entries
	support to -shared for creating shared object.
	* README: Apply it.

2012-12-03  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-error-1.patch: Removed.
	* README: Likewise.

2012-12-01  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14899-1.patch: Also build binutils and gprof after
	gas.

2012-11-30  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14899-1.patch: New.  Build ld and gold after gas.
	* README: Apply it.
