@@ -131,7 +131,7 @@ ld/
 	* scripttempl/elf.sc: Support sharable sections.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index faaf632..6f86144 100644
+index 1fd73cf..c76c383 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
 @@ -2144,6 +2144,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
@@ -164,10 +164,10 @@ index faaf632..6f86144 100644
  extern bfd_boolean bfd_elf_link_record_dynamic_symbol
    (struct bfd_link_info *, struct elf_link_hash_entry *);
 diff --git a/bfd/elf.c b/bfd/elf.c
-index 9cd3542..efe5e8e 100644
+index 7ab3683..af2613b 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -2094,6 +2094,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
+@@ -2095,6 +2095,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
    { STRING_COMMA_LEN (".gnu.liblist"),     0, SHT_GNU_LIBLIST, SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.conflict"),    0, SHT_RELA,        SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.hash"),        0, SHT_GNU_HASH,    SHF_ALLOC },
@@ -176,7 +176,7 @@ index 9cd3542..efe5e8e 100644
    { NULL,                        0,        0, 0,               0 }
  };
  
-@@ -2148,6 +2150,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
+@@ -2149,6 +2151,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
    /* See struct bfd_elf_special_section declaration for the semantics of
       this special case where .prefix_length != strlen (.prefix).  */
    { ".stabstr",			5,  3, SHT_STRTAB, 0 },
@@ -185,7 +185,7 @@ index 9cd3542..efe5e8e 100644
    { NULL,                       0,  0, 0,          0 }
  };
  
-@@ -3608,6 +3612,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
+@@ -3609,6 +3613,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
  	}
      }
  
@@ -218,7 +218,7 @@ index 9cd3542..efe5e8e 100644
    /* Let the backend count up any program headers it might need.  */
    bed = get_elf_backend_data (abfd);
    if (bed->elf_backend_additional_program_headers)
-@@ -3779,6 +3809,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -3780,6 +3810,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
        bfd_boolean phdr_in_segment = TRUE;
        bfd_boolean writable;
        int tls_count = 0;
@@ -227,7 +227,7 @@ index 9cd3542..efe5e8e 100644
        asection *first_tls = NULL;
        asection *dynsec, *eh_frame_hdr;
        bfd_size_type amt;
-@@ -4087,6 +4119,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4088,6 +4120,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  		first_tls = s;
  	      tls_count++;
  	    }
@@ -250,7 +250,7 @@ index 9cd3542..efe5e8e 100644
  	}
  
        /* If there are any SHF_TLS output sections, add PT_TLS segment.  */
-@@ -4114,6 +4162,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4115,6 +4163,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  	  pm = &m->next;
  	}
  
@@ -311,7 +311,7 @@ index 9cd3542..efe5e8e 100644
        /* If there is a .eh_frame_hdr section, throw in a PT_GNU_EH_FRAME
  	 segment.  */
        eh_frame_hdr = elf_tdata (abfd)->eh_frame_hdr;
-@@ -4655,6 +4757,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
+@@ -4656,6 +4758,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
  	  align = (bfd_size_type) 1 << bfd_get_section_alignment (abfd, sec);
  
  	  if ((p->p_type == PT_LOAD
@@ -1153,7 +1153,7 @@ index 4842257..e9cd479 100644
  if [ "x${host}" = "x${target}" ]; then
    case " $EMULATION_LIBPATH " in
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index 13a1a41..b7b9aed 100644
+index e2f2a1a..cf84986 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -105,6 +105,7 @@ gld${EMULATION_NAME}_before_parse (void)
@@ -1161,10 +1161,10 @@ index 13a1a41..b7b9aed 100644
    config.has_shared = `if test -n "$GENERATE_SHLIB_SCRIPT" ; then echo TRUE ; else echo FALSE ; fi`;
    config.separate_code = `if test "x${SEPARATE_CODE}" = xyes ; then echo TRUE ; else echo FALSE ; fi`;
 +  link_info.sharable_sections = `if test "$SHARABLE_SECTIONS" = "yes" ; then echo TRUE ; else echo FALSE ; fi`;
- EOF
+ }
  
- case ${target} in
-@@ -1828,6 +1829,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+ EOF
+@@ -1818,6 +1819,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
    int iself = s->owner->xvec->flavour == bfd_target_elf_flavour;
    unsigned int sh_type = iself ? elf_section_type (s) : SHT_NULL;
  
